# mycpp

./: DZ1_OOP.txt  DZ2_OOP.txt  DZ3_OOP.txt  DZ4_OOP.txt  Dz8.txt  Dz9.txt  Programmirovanie_DZ4_1596569374.txt  dz7.txt  less5_hw.rar  urok14.txt  urok15-16.txt  urok17.txt  Программирование ДЗ1.txt  Программирование ДЗ2.txt  Программирование ДЗ3.txt  Программирование ДЗ4.txt  Программирование ДЗ5.txt  Программирование ДЗ6.txt  Программирование ДЗ_Урок1.txt  Программирование ДЗ_Урок2.txt  Программирование ДЗ_Уроки11-12.txt  Программирование ДЗ_Уроки3-4.txt  Программирование ДЗ_Уроки5-6.txt  Программирование ДЗ_Уроки7-8.txt
ADO/ADOExam/: ADOExam.sln
ADO/Less1_hw/: Less1_hw.sln
ADO/Less2_hw/: Less2_hw.sln  SQLQuery1.sql
ADO/Less3_hw/: SQLQuery1.sql
ASPNet/AcademyWebApp/: AcademyWebApp.sln
ASPNet/HelloMVC/: HelloMVC.sln
ASPNet/Less1_hw/: Less1_hw.sln
ASPNet/Less2_cw/: Less2_cw.sln
ASPNet/Less2_hw/: Homework.sln
ASPNet/Less3_cw/: Less3_cw.sln
ASPNet/Less3_hw/: Less3_hw.sln
ASPNet/Less4_hw/: Less4_hw.sln
Amazon/: config.csv  hw_amazon.txt
C#/Exam/: Exam.sln
Complex/: Complex.sln
Drob/: Drob.sln
Flat/: Flat.sln
House/: House.sln
Lab2/: Lab2.cbp.save  Lab2.depend  Lab2.layout  Lab2.layout.save  Test.depend  Test.layout  main.cpp  main.cpp.save
Lab4_new/: GetDataDlg.cpp  GetDataDlg.cpp.save  GetDataDlg.fbp  GetDataDlg.h  GetDataDlg.h.save  Lab4_new.cbp.save  Lab4_new.depend  Lab4_new.layout  Lab4_new.layout.save  Lab4_newApp.cpp  Lab4_newApp.h  Lab4_newMain.cpp  Lab4_newMain.cpp.save  Lab4_newMain.cpp_  Lab4_newMain.h  Lab4_newMain.h.save  Lab4_newMain.h_  WxWizFrame.fbp  XYZ.cpp  XYZ.cpp.save  XYZ.h  XYZ.h.save  wxPoints.cpp  wxPoints.cpp.save  wxPoints.h  wxPoints.h.save
Overcoat/: Overcoat.sln
PyTest/: import turtle.py
Qt/: schema.drawio
Qt/less1/: CMakeLists.txt  main.cpp  main.qml
Qt/qtwidget/: CMakeLists.txt  database.cpp  database.h  form1.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Reservoir/: Reservoir.sln
SQL/: Lesson1_hw.sql  Lesson3_hw.sql  Lesson4_hw.sql  Lesson5_hw.sql  Lesson6_hw.sql  exam1.sql
String/: String.sln
Sudoku/: Sudoku.sln
SudokuGUI/: SudokuGUI.sln
TSQL/: Exam.sql  less1_hw.sql  less2_hw.sql  less3_hw.sql  less4_hw.sql
UML/: Shop.drawio  labirint.drawio  terminal+mystat.drawio
build-openlib-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
learning/: UpgradeLog.htm  learning.sln
less10_hw/: less10_hw.sln
less11_hw/: less11_hw.sln
less12_hw/: less12_hw.sln
less14_hw/: less14_hw.sln
less5_hw/: less5_hw.sln
less8_hw/: less8_hw.sln
less9_hw/: less9_hw.sln
openlib/: mainwindow.cpp  mainwindow.h  mainwindow.ui  openlib.pro.user.5505cef  openlib.pro.user.c51496a
test/: test.sln
yarik/: Prog.cpp  String.cpp  String.h
(+2295 files in other folders)
